test/error/lex/unclosedComment.tig
let
	a:= 2 /* close comments
in
	a
end
